5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1716_2496.log
== TEST (2019-05-09 16:12:40) 
-- CODE:
num = int('Digite um numero: ')

while (num != -1):
	num = int('Digite um numero: ')
	if (num == -1):
		print(-1)
	else:
		print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    num = int('Digite um numero: ')
ValueError: invalid literal for int() with base 10: 'Digite um numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:08) 
-- CODE:
num = int(input('Digite um numero: ')

while (num != -1):
	num = int(input('Digite um numero: ')
	if (num == -1):
		print(-1)
	else:
		print(num)
-- ERROR:
File "XXXX", line 3
    while (num != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:13:58) 
-- CODE:
num = int(input('Digite um numero: ')

while (num != -1):
	num = int(input('Digite um numero: ')
	if (num == -1):
		print(-1)
	else:
		print(num)
-- ERROR:
File "XXXX", line 3
    while (num != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:14:05) 
-- CODE:
num = int(input('Digite um numero: ')

while(num != -1):
	num = int(input('Digite um numero: ')
	if (num == -1):
		print(-1)
	else:
		print(num)
-- ERROR:
File "XXXX", line 3
    while(num != -1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:15:40) 
-- CODE:
num = int(input('Digite um numero: ')

soma = num + num

while(num != -1):
	num = int(input('Digite um numero: ')
	if (num == -1):
		print(-1)
	else:
		print(soma)
-- ERROR:
File "XXXX", line 3
    soma = num + num
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:16:47) 
-- CODE:
num = int(input('Digite um numero: ')

soma = (num + num)

while(num != -1):
	num = int(input('Digite um numero: ')
	if (num == -1):
		print(-1)
	else:
		soma = (num + num)
		print(soma)
-- ERROR:
File "XXXX", line 3
    soma = (num + num)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:45) 
-- CODE:
num = int(input('Digite um numero: ')

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = num
			 
print(soma)
-- ERROR:
File "XXXX", line 3
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:56) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = num
			 
print(soma)
-- ERROR:
File "XXXX", line 3
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:20) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:21:26) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- EXECUTION TIME:
0.191842
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:31:02) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = num
			 
print(soma)
-- EXECUTION TIME:
603.921
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:05:32) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- EXECUTION TIME:
0.029274
-- ERROR:
Error response from daemon: Container 36c96495cc686daac10f3b18b17955e498cfe765a0cb746635ed615246a66ef0 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:05:36) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:05:42) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
	print(soma)
-- EXECUTION TIME:
0.02403
-- ERROR:
Error response from daemon: Container 36c96495cc686daac10f3b18b17955e498cfe765a0cb746635ed615246a66ef0 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:05:45) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
	print(soma)
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:09) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
	print(soma)
-- EXECUTION TIME:
0.0308902
-- ERROR:
Error response from daemon: Container 36c96495cc686daac10f3b18b17955e498cfe765a0cb746635ed615246a66ef0 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:24) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:27) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- EXECUTION TIME:
0.0313032
-- ERROR:
Error response from daemon: Container 36c96495cc686daac10f3b18b17955e498cfe765a0cb746635ed615246a66ef0 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:08:32) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:08:50) 
-- CODE:
num = int(input('Digite um numero: '))

soma = 0

while(num != -1):
	soma = soma + num
			 
	num = int(input('Digite um numero: '))
			 
print(soma)
-- EXECUTION TIME:
0.146669
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
